--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
     <div class="container">
       <div class="main-head">
         <div class="nav-1">
-          <ul>
-            <li >
-             <a href="#section-1-id"> <h3 id = 'section-1-title'>Frist Section</h3></a>
-            </li>
-            <li>
-             <a href="#section-2-id"> <h3 id = 'section-2-title'> Second Section</h3></a>
-            </li>
-            <li>
-              <a href="#section-3-id"><h3 id = 'section-3-title'> Third Section</h3></a>
-            </li>
+         <ul class = ulist>
           </ul>
         </div>
         <div class="page-titel">
@@ -32,12 +23,12 @@
               <a href="#section-1-id"><h3>Go Up</h3></a>
             </li>
             <li>
-              <a href="#section-3-id"><h3>Go Downe</h3></a>
+              <a href="#section-4-id"><h3>Go Downe</h3></a>
             </li>
           </ul>
         </div>
       </div>
-      <div class="main-content">
+      <div class="main-content" id = "main-content-id">
         <section class=" section-1" id="section-1-id">
           <article> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
             rem minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
@@ -91,6 +82,34 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
             rem
             
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+            minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+          </article>
+        </section>
+        <section class=" section-4" id="section-4-id">
+          <article>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto
+            magnam odit
+            rem minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
+            rem
+        
             minus. Mollitia a ipsa est alias veritatis sunt aperiam aut debitis dolore temporibus?
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta aspernatur facere animi, ducimus iusto magnam odit
             rem
